Make sure entire field label for doc type is visible

--- a/app/assets/stylesheets/_catalog.css.scss
+++ b/app/assets/stylesheets/_catalog.css.scss
@@ -25,7 +25,7 @@
     dl {margin-top: 8px;}
     dt {
       text-align: left;
-      width: 50px;
+      width: 120px;
     }
     dd {margin-left: 60px;}
     img {vertical-align: top;}
